API integration and setup theme

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News App</title>
   </head>
-  <body dark="true" class="dark:bg-slate-950 bg-gray-100" data-theme="dark">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
